Mit Colab erstellt

--- a/homeexercise2.ipynb
+++ b/homeexercise2.ipynb
@@ -61,7 +61,7 @@
       ],
       "metadata": {
         "id": "kxwz_cPyW4lG",
-        "outputId": "9477b35f-cfcd-4de4-9c61-1f0507e78aa5",
+        "outputId": "9dbea315-736d-4e3f-f7b7-46bd3790ac9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -72,39 +72,39 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-11-25 14:47:31--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
-            "Resolving github.com (github.com)... 140.82.114.4\n",
-            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+            "--2024-11-26 14:27:39--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin [following]\n",
-            "--2024-11-25 14:47:31--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2024-11-26 14:27:39--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 96769269 (92M) [application/octet-stream]\n",
-            "Saving to: ‘word2vec_embeddings.bin.1’\n",
+            "Saving to: ‘word2vec_embeddings.bin’\n",
             "\n",
-            "word2vec_embeddings 100%[===================>]  92.29M   236MB/s    in 0.4s    \n",
+            "word2vec_embeddings 100%[===================>]  92.29M   202MB/s    in 0.5s    \n",
             "\n",
-            "2024-11-25 14:47:32 (236 MB/s) - ‘word2vec_embeddings.bin.1’ saved [96769269/96769269]\n",
+            "2024-11-26 14:27:40 (202 MB/s) - ‘word2vec_embeddings.bin’ saved [96769269/96769269]\n",
             "\n",
-            "--2024-11-25 14:47:32--  http://!wget/\n",
+            "--2024-11-26 14:27:40--  http://!wget/\n",
             "Resolving !wget (!wget)... failed: Name or service not known.\n",
             "wget: unable to resolve host address ‘!wget’\n",
-            "--2024-11-25 14:47:32--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/master/exercises/HomeExercise2.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2024-11-26 14:27:40--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/master/exercises/HomeExercise2.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 272272 (266K) [text/plain]\n",
-            "Saving to: ‘HomeExercise2.txt.1’\n",
+            "Saving to: ‘HomeExercise2.txt’\n",
             "\n",
-            "HomeExercise2.txt.1 100%[===================>] 265.89K  --.-KB/s    in 0.009s  \n",
+            "HomeExercise2.txt   100%[===================>] 265.89K  --.-KB/s    in 0.04s   \n",
             "\n",
-            "2024-11-25 14:47:32 (29.4 MB/s) - ‘HomeExercise2.txt.1’ saved [272272/272272]\n",
+            "2024-11-26 14:27:40 (7.03 MB/s) - ‘HomeExercise2.txt’ saved [272272/272272]\n",
             "\n",
-            "FINISHED --2024-11-25 14:47:32--\n",
+            "FINISHED --2024-11-26 14:27:40--\n",
             "Total wall clock time: 0.1s\n",
-            "Downloaded: 1 files, 266K in 0.009s (29.4 MB/s)\n"
+            "Downloaded: 1 files, 266K in 0.04s (7.03 MB/s)\n"
           ]
         }
       ]
@@ -173,7 +173,7 @@
       ],
       "metadata": {
         "id": "yKHVQpGbxGc7",
-        "outputId": "c4bc7d56-e335-4da8-bb4f-653e126c4509",
+        "outputId": "6089e8a4-cf6c-4969-913b-10cdbc1d2a0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -265,7 +265,7 @@
       ],
       "metadata": {
         "id": "knGLoU0kXaZb",
-        "outputId": "7128f1d5-e665-4ec2-a0f2-2c1cbc725a6a",
+        "outputId": "684d6fd7-ae87-4dd3-832e-9033a14e2fc2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -345,7 +345,7 @@
       ],
       "metadata": {
         "id": "noalz14AzkQR",
-        "outputId": "b102f304-dc90-4a63-b144-008a007e0208",
+        "outputId": "8a3506a8-c9d6-47ca-83ad-60bd7887b934",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -356,6 +356,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[==================================================] 100.0% 128.1/128.1MB downloaded\n",
             "<class 'gensim.models.keyedvectors.KeyedVectors'>\n"
           ]
         }
@@ -377,7 +378,7 @@
       ],
       "metadata": {
         "id": "NmyLiSoF0s0e",
-        "outputId": "a9a6fca6-6ec1-4a25-c705-3c757bf52080",
+        "outputId": "9c17b798-e5bd-49ce-9ca9-8bedc0ef9b7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -458,7 +459,7 @@
       ],
       "metadata": {
         "id": "dZk0eA3B1ZSV",
-        "outputId": "f364a852-d346-47e8-955b-7f243df7fec0",
+        "outputId": "b150fd02-e55a-4f2b-a657-e46c01fdff8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -571,7 +572,7 @@
         ", the accuracy is: 0.56\n",
         "Accuracy for all analogies: 0.62\n",
         "\n",
-        "word2vec performs better in almost all categories, except for the categories \"capital-common-countries\", \"capital-world\" and \"gram6-nationality-adjective\". word2vec performs especially well for grammatical and geographical relations, whereas gloVe performs best for common capital relationships and nationality ajectives. The overal accuracy (for all analogies) is also higher for the word2vec model than for the gloVe model. This is surprising since the gloVe model is supposed to be a (also small but) more powerful model. Perhaps this results from the type of corpus/ data that the models were trained on and the relationships it covers. Moreover, I read online that the two models use different embedding techniques: word2vec works with local context windows (more focused on context, detail, local relationships) whereas gloVe is count-based model creating and relying on a global co-occurrence matrix (more focused on global semantic relationships). This explains why word2vec was able to capture smaller-scale relationships better (such as city-in-state or comparatives), and why gloVe captured broader relationships better (e.g., capitals).\n",
+        "word2vec performs better in almost all categories, except for the categories \"capital-common-countries\", \"capital-world\" and \"gram6-nationality-adjective\". word2vec performs especially well for grammatical and geographical relations and GloVe performs best for common capital relationships and nationality ajectives. The overall accuracy (for all analogies) is also higher for the word2vec model than for the GloVe model. This is surprising since the GloVe model is supposed to be a (also small but) more powerful model. Perhaps this results from the type of corpus/data that the models were trained on and the relationships it covers. Moreover, I read online that the two models use different embedding techniques: word2vec works with local context windows (more focused on context, detail, local relationships) whereas GloVe is a count-based model creating and relying on a global co-occurrence matrix (more focused on global semantic relationships). This explains why word2vec was able to capture smaller-scale relationships better (such as city-in-state or comparatives), and why GloVe captured broader relationships better (e.g., capitals).\n",
         "It is also interesting to see that the models both performed very poorly on the currency analogies. This could be due to sparse or inconsistent training data for both models related to currency."
       ],
       "metadata": {
@@ -635,7 +636,7 @@
       ],
       "metadata": {
         "id": "h5C4yZsN2lAa",
-        "outputId": "2cd53706-febe-4265-c50f-4d42e080014f",
+        "outputId": "7be53cec-c017-4cbe-f975-36c3f81be9b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 523
@@ -672,9 +673,9 @@
         "Content of clusters: In both visualisations, the words/embeddings that are grouped together are the same ones: one cluster for animals, one cluster for countries, one cluster for food and beverages, etc. However, in the word2vec visualisation from Tutorial 3, it seems that a more significant distinction is made between food (things to eat) and beverages (things to drink), which is not necessarily visible in the GloVe visualisation above (other than that the beverages embeddings are slightly closer to the embedding for \"water\" than the food embeddings).\n",
         "Moreover, the distance between elements of the clusters is slightly different, e.g. the distance between \"horse\" and the other animal embeddings.\n",
         "\n",
-        "Position of clusters: The clusters (and hence the contained embeddings) are located in different positions on the scales of the two visualisations.\n",
+        "Position of clusters: The clusters (and hence the contained embeddings) are located in different positions on the scales of the two visualisations. This makes sense because the models are trained on different datasets and they created their own embeddings based on their training data and hence have their own unique embedding space and scaling.\n",
         "\n",
-        "In conclusion, one can say that the two models captured similar semantic meanings/word relationships, but that the embedding space (scaling, coordinate system) is different. This makes sense because the models are trained on different datasets and they created their own embeddings based on their training data and hence have their own unique embedding space and scaling."
+        "In conclusion, one can say that the two models captured similar semantic meanings/word relationships and hence similar clusters, but that their embedding space (scaling, coordinate system) is different."
       ],
       "metadata": {
         "id": "fupuFQyF-oBg"
@@ -708,7 +709,7 @@
       ],
       "metadata": {
         "id": "bdEoibPg4Ylz",
-        "outputId": "fa18823c-e411-4ab8-9649-cd1e7b7445c7",
+        "outputId": "3e242011-3993-4494-b5c4-5d98d70e12b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -750,7 +751,7 @@
       ],
       "metadata": {
         "id": "IVvhsv5u7wHA",
-        "outputId": "c56af758-a298-4254-ce2d-d09003fc4520",
+        "outputId": "222aebfa-5557-40ef-eded-274a7678d7ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -772,9 +773,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Both models learned from training data that some clothing items are stereotypically considered masculine (e.g., \"pants\", \"jacket\") and that there are also stereotypically considered female items such as \"skirt\". However, it seems like the GloVe model is a little more biased than the word2vec model in this case since the word \"pants\" (a stereotypically male piece of clothing) is \"only\" the third most similar word for word2vec, but the first one for GloVe.\n",
+        "I tested steretypes related to female/male clothing style and related to origin/ethnicity:\n",
         "\n",
-        "In the case of the \"Europe\"/\"Africa\" example, both models are biased: They reinforce racial stereotypes and reduce geographical regions to specific races."
+        "Both models learned from the training data that some clothing items are stereotypically considered masculine (e.g., \"pants\", \"jacket\") and that some are considered female (e.g., \"skirt\"). However, it seems that the GloVe model is a little more biased than the word2vec model in this case since the word \"pants\" (a stereotypically male piece of clothing) is \"only\" the third most similar word for word2vec, but the first one for GloVe.\n",
+        "\n",
+        "In the case of the \"Europe\"/\"Africa\" example, both models are biased: They reinforce racial stereotypes and reduce geographical regions to specific races, in this case \"Europe\" to \"white\" and \"Africa\" to \"black\"."
       ],
       "metadata": {
         "id": "iqYJAogrbRTq"
