Mit Colab erstellt

--- a/exercises/HomeExercise3.ipynb
+++ b/exercises/HomeExercise3.ipynb
@@ -8435,11 +8435,11 @@
       ],
       "metadata": {
         "id": "l5qNCvNDx_q0",
-        "outputId": "9a64265d-42e0-4a1d-91ca-9fcc9de01924",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 391
-        }
+        },
+        "outputId": "9a64265d-42e0-4a1d-91ca-9fcc9de01924"
       },
       "execution_count": 24,
       "outputs": [
@@ -8545,11 +8545,11 @@
         "tokenizer.save_pretrained(save_directory)"
       ],
       "metadata": {
-        "id": "BSzRha0CxOAt",
-        "outputId": "ae20b353-c00e-4248-b895-feb7f261e616",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BSzRha0CxOAt",
+        "outputId": "ae20b353-c00e-4248-b895-feb7f261e616"
       },
       "execution_count": 27,
       "outputs": [
@@ -8596,11 +8596,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "zMvfQKTvYvdU",
-        "outputId": "39452e61-570b-4b76-fdf1-77ebbae331f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zMvfQKTvYvdU",
+        "outputId": "39452e61-570b-4b76-fdf1-77ebbae331f8"
       },
       "execution_count": 28,
       "outputs": [
@@ -8616,7 +8616,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# testing final trained model on test set:\n",
+        "# testing final trained model on entire test set:\n",
         "\n",
         "best_model_Optuna = AutoModelForSequenceClassification.from_pretrained(\"/content/drive/MyDrive/final_cl_trainer-retrain_checkpoint-24\")\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"/content/drive/MyDrive/final_cl_trainer-retrain_checkpoint-24\")\n",
@@ -8644,12 +8644,12 @@
         "#print(\"Test results of the first model tuned by Optuna:\", test_results_best_model_Optuna)"
       ],
       "metadata": {
-        "id": "VJHEJjE0j0JV",
-        "outputId": "e5998628-f6bf-4574-8678-9c500641de4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        }
+        },
+        "id": "VJHEJjE0j0JV",
+        "outputId": "e5998628-f6bf-4574-8678-9c500641de4a"
       },
       "execution_count": 30,
       "outputs": [
