--- a/exercises/HomeExercise3.ipynb
+++ b/exercises/HomeExercise3.ipynb
@@ -6797,7 +6797,7 @@
         "with 0.6875, as can be seen in the cells above. I saved this version to my Google Drive to be able to come back to it.\n",
         "\n",
         "Then I used Optuna to test hyperparameters (see below) and I used 15 trials and specified which hyperparameters to tune.\n",
-        "I provided the study with good baseline hyperparameters that I found in a previous Optuna hyperparameter testing so that the Optuna search\n",
+        "I provided the Optuna study with good baseline hyperparameters that I found in a previous Optuna hyperparameter testing so that the Optuna search\n",
         "goes in the right direction. Explanation about this first previous Optuna tuning: I had specified a high number of trials and the training\n",
         "took several hours so I stopped it halfway, but I got some good baseline hyperparameters that I then fed into my Optuna search with 15\n",
         "trials (visible in the code below).“\n",
@@ -6833,7 +6833,7 @@
         "# such as the classification head\n",
         "def reset_classification_head(model, num_labels):\n",
         "    \"\"\"\n",
-        "    Reset the classification head of the Hugging Face model.\n",
+        "    Reset the classification head of the Hugging Face model\n",
         "    \"\"\"\n",
         "    model.classifier = torch.nn.Linear(model.config.hidden_size, num_labels)\n",
         "    torch.nn.init.xavier_uniform_(model.classifier.weight)\n",
@@ -6854,7 +6854,6 @@
         "    per_device_train_batch_size = trial.suggest_categorical(\"per_device_train_batch_size\", [8, 16, 32])\n",
         "    num_train_epochs = trial.suggest_int(\"num_train_epochs\", 3, 10)\n",
         "\n",
-        "    # Define training arguments\n",
         "    arguments = TrainingArguments(\n",
         "        output_dir=\"optuna_cl_trainer\",\n",
         "        per_device_train_batch_size=per_device_train_batch_size,\n",
@@ -6870,13 +6869,11 @@
         "        seed=224\n",
         "    )\n",
         "\n",
-        "    # Define metrics\n",
         "    def compute_metrics(eval_pred):\n",
         "        logits, labels = eval_pred\n",
         "        predictions = np.argmax(logits, axis=-1)\n",
         "        return accuracy.compute(predictions=predictions, references=labels)\n",
         "\n",
-        "    # Initialize Trainer\n",
         "    trainer = Trainer(\n",
         "        model=model,\n",
         "        args=arguments,\n",
@@ -8404,7 +8401,7 @@
         "\n",
         "final_model = AutoModelForSequenceClassification.from_pretrained(\"distilbert/distilbert-base-cased\", num_labels=2)\n",
         "\n",
-        "# Now I am training this model with these parameters:\n",
+        "# Now I am training this model with these hyperparameters:\n",
         "final_arguments = TrainingArguments(\n",
         "    output_dir=\"final_cl_trainer-retrain\",\n",
         "    per_device_train_batch_size=best_params[\"per_device_train_batch_size\"],\n",
@@ -8584,7 +8581,7 @@
       "cell_type": "code",
       "source": [
         "# This just tests 1 sentence and gives me prediction:\n",
-        "test_str = \"I love this movie!\"\n",
+        "test_str = \"I don't like but also don't dislike this movie!\"\n",
         "model_inputs = tokenizer(test_str, return_tensors=\"pt\")\n",
         "\n",
         "best_model_Optuna = AutoModelForSequenceClassification.from_pretrained(\"/content/drive/MyDrive/final_cl_trainer-retrain_checkpoint-24\")\n",
@@ -8600,15 +8597,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zMvfQKTvYvdU",
-        "outputId": "39452e61-570b-4b76-fdf1-77ebbae331f8"
+        "outputId": "21c15a88-d134-4a12-cbb6-2edb4bd3b358"
       },
-      "execution_count": 28,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "POSITIVE\n"
+            "NEGATIVE\n"
           ]
         }
       ]
@@ -8616,7 +8613,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# testing final trained model on entire test set:\n",
+        "# Testing final trained model on entire test set:\n",
         "\n",
         "best_model_Optuna = AutoModelForSequenceClassification.from_pretrained(\"/content/drive/MyDrive/final_cl_trainer-retrain_checkpoint-24\")\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"/content/drive/MyDrive/final_cl_trainer-retrain_checkpoint-24\")\n",
@@ -8687,6 +8684,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''\n",
+        "In conclusion, the accuracy of the best model resulting from the Optuna hyperparameter tuning amounts to 0.6875. This is quite disappointing,\n",
+        "especially since we learned in the machine learning class that accuracy is not even the best metric to use (it doesn't account for all cases).\n",
+        "If I had had more time, I would have continued tuning hyperparameters for a more desirable result. Since the Optuna tuning took hours (even for\n",
+        "the 15 trials) and Google Colab disconnects after a while, I would continue with manual tuning from here.\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "nnbnzBX1RHm1"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
