Mit Colab erstellt

--- a/exercises/HomeExercise3.ipynb
+++ b/exercises/HomeExercise3.ipynb
@@ -5890,7 +5890,7 @@
         },
         "outputId": "ff221a33-dc42-4fe4-c232-ec3aef0d39f3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6062,7 +6062,7 @@
       "metadata": {
         "id": "lWk_C8B3VFMp"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6291,7 +6291,7 @@
           ]
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6567,7 +6567,7 @@
       "metadata": {
         "id": "rVy49iUcVI8-"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6616,7 +6616,7 @@
         },
         "outputId": "b3c94f1f-7827-4056-b82d-9393a6c501e2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6641,7 +6641,7 @@
         },
         "outputId": "6aa3360c-1d57-4fd9-e54a-b3659ef8f2c9"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6739,7 +6739,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6819,7 +6819,7 @@
       "metadata": {
         "id": "NGwzngeEVMdd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8438,7 +8438,7 @@
         },
         "outputId": "9a64265d-42e0-4a1d-91ca-9fcc9de01924"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8548,7 +8548,7 @@
         "id": "BSzRha0CxOAt",
         "outputId": "ae20b353-c00e-4248-b895-feb7f261e616"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8599,7 +8599,7 @@
         "id": "zMvfQKTvYvdU",
         "outputId": "21c15a88-d134-4a12-cbb6-2edb4bd3b358"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8648,7 +8648,7 @@
         "id": "VJHEJjE0j0JV",
         "outputId": "e5998628-f6bf-4574-8678-9c500641de4a"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8693,6 +8693,13 @@
         "especially since we learned in the machine learning class that accuracy is not even the best metric to use (it doesn't account for all cases).\n",
         "If I had had more time, I would have continued tuning hyperparameters for a more desirable result. Since the Optuna tuning took hours (even for\n",
         "the 15 trials) and Google Colab disconnects after a while, I would continue with manual tuning from here.\n",
+        "\n",
+        "Other remarks:\n",
+        "- I realised I could have increased the size of the datasets to improve results but my computer's capacities are limited so I stuck with the initial sizes.\n",
+        "- I realised that I split the data into train/val/test in a way that is not ideal. The 3 sets might not be perfectly separated. The code technically\n",
+        "works because I indicate ranges, but I apply the shuffling 3 times and depending on how the shuffling really works internally,\n",
+        "it can be a bit unpredictable and it is probably not the cleanest way of handling this. For next time, it might be better to shuffle once\n",
+        "and then split into the 3 sets.\n",
         "'''"
       ],
       "metadata": {
