--- a/exercises/HomeExercise3.ipynb
+++ b/exercises/HomeExercise3.ipynb
@@ -643,7 +643,7 @@
           ]
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -673,7 +673,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2787,10 +2787,7 @@
         ")\n",
         "\n",
         "test_results_best_model_Optuna = trainer_for_testing.evaluate()\n",
-        "print(\"Test results of the best model tuned by Optuna:\", test_results_best_model_Optuna)\n",
-        "\n",
-        "#test_results_best_model_Optuna = best_model_Optuna.evaluate(eval_dataset=small_tokenized_dataset['test'])\n",
-        "#print(\"Test results of the first model tuned by Optuna:\", test_results_best_model_Optuna)"
+        "print(\"Test results of the best model tuned by Optuna:\", test_results_best_model_Optuna)"
       ],
       "metadata": {
         "colab": {
@@ -2841,20 +2838,24 @@
       "cell_type": "code",
       "source": [
         "'''\n",
-        "In conclusion, the accuracy of the best model resulting from the Optuna hyperparameter tuning amounts to 0.6875. This is quite disappointing,\n",
+        "In conclusion, the accuracy of the best model resulting from the Optuna hyperparameter tuning amounts to 0.6875 (on the test set). This is quite disappointing,\n",
         "especially since we learned in the machine learning class that the metric accuracy is not even the best metric to use (it doesn't take all parts of\n",
         "the confusion matrix into account).\n",
         "The reason why the accuracy is very low can be the result of the following facts:\n",
-        "- the dataset is small (I only used 128 samples for train set and 32 for validation and 32 for test) - I wanted to use bigger sets but my computer's\n",
-        "capacities are quite limited so I used the initial ones;\n",
-        "- I set the truncation to 100; a higher value could potentially improve results (but more padding might also affect the model)\n",
+        "- The dataset I used is small (I only used 128 samples for train set and 32 for validation and 32 for test) - I wanted to use bigger sets but my\n",
+        "computer's capacities are quite limited so I used the initial ones.\n",
+        "- I set the truncation to 100; a higher value could potentially improve results (but more padding might also affect the model).\n",
         "- I split the data into train/val/test in a way that is not ideal and hence the 3 sets might not be perfectly separated. The code technically\n",
         "works because I indicate ranges, but I apply shuffling 3 times and not knowing how the shuffling really works internally, this can make the model a bit\n",
         "unpredictable and it is probably not the cleanest way of handling this. For next time, it might be better to shuffle once and then split into the 3 sets.\n",
+        "- The accuracy when evaluated on the validation set is significantly higher (0.8125) than the accuracy on the test set (0.6875). Hence, the model\n",
+        "might be overfitted on the validation set because the hyperparameters were fine-tuned to the validation set (-> overfitting to validation set can happen\n",
+        "especially in cases with small datasets such as my case).\n",
         "\n",
-        "If I had had more time, I would have continued tuning hyperparameters for a more desirable result. Since the Optuna tuning took hours (even for\n",
+        "If I had had more time, I would have continued tuning hyperparameters for a more desirable result and I would have used\n",
+        "cross-validation just in case to not overfit the tuning to the validation set. Since the Optuna tuning took hours (even for\n",
         "the 15 trials and the small datasets) and Google Colab disconnects after a while, I would continue with manual tuning from here,\n",
-        "and try out to play with truncation a bit more.\n",
+        "and potentially try to play with truncation a bit more.\n",
         "'''"
       ],
       "metadata": {
