Mit Colab erstellt

--- a/exercises/HomeExercise3.ipynb
+++ b/exercises/HomeExercise3.ipynb
@@ -9672,21 +9672,19 @@
         "In conclusion, the accuracy of the best model resulting from the Optuna hyperparameter tuning amounts to 0.6875 (on the test set). This is quite disappointing,\n",
         "especially since we learned in the machine learning class that the metric accuracy is not even the best metric to use (it doesn't take all parts of\n",
         "the confusion matrix into account).\n",
-        "The reason why the accuracy is very low can be the result of the following facts:\n",
+        "The reason why the accuracy is rather low can be the result of the following facts:\n",
         "- The dataset I used is small (I only used 128 samples for train set and 32 for validation and 32 for test) - I wanted to use bigger sets but my\n",
         "computer's capacities are quite limited so I used the initial ones.\n",
         "- I set the truncation to 100; a higher value could potentially improve results (but more padding might also affect the model).\n",
         "- I split the data into train/val/test in a way that is not ideal and hence the 3 sets might not be perfectly separated. The code technically\n",
         "works because I indicate ranges, but I apply shuffling 3 times and not knowing how the shuffling really works internally, this can make the model a bit\n",
         "unpredictable and it is probably not the cleanest way of handling this. For next time, it might be better to shuffle once and then split into the 3 sets.\n",
-        "- The accuracy when evaluated on the validation set is significantly higher (0.8125) than the accuracy on the test set (0.6875). Hence, the model\n",
-        "might be overfitted on the validation set because the hyperparameters were fine-tuned to the validation set (-> overfitting to validation set can happen\n",
-        "especially in cases with small datasets such as my case).\n",
+        "- The accuracy when evaluated on the validation set is significantly higher (0.8125) than the accuracy on the test set (0.6875). Since the hyperparameters\n",
+        "were fine-tuned to the validation set, they are potentially overfitting to the validation set and that can happen especially easily with small datasets\n",
+        "such as my case. I read that cross-validation is a way to avoid this issue (validation set used always changes).\n",
         "\n",
-        "If I had had more time, I would have continued tuning hyperparameters for a more desirable result and I would have used\n",
-        "cross-validation just in case to not overfit the tuning to the validation set. Since the Optuna tuning took hours (even for\n",
-        "the 15 trials and the small datasets) and Google Colab disconnects after a while, I would continue with manual tuning from here,\n",
-        "and potentially try to play with truncation a bit more.\n",
+        "If I had had more time, I would have continued the hyperparameter tuning for a more desirable result by trying to improve on the\n",
+        "points mentioned above.\n",
         "'''"
       ],
       "metadata": {
