Mit Colab erstellt

--- a/exercises/HomeExercise3.ipynb
+++ b/exercises/HomeExercise3.ipynb
@@ -6574,7 +6574,7 @@
         },
         "outputId": "798fc88f-55ad-4f1e-92eb-b67ae1965c56"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6803,7 +6803,7 @@
       "metadata": {
         "id": "lWk_C8B3VFMp"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7032,7 +7032,7 @@
           ]
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7344,7 +7344,7 @@
       "metadata": {
         "id": "rVy49iUcVI8-"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7418,7 +7418,7 @@
         },
         "outputId": "c89e3210-70e7-4a77-d862-53a7b8d50447"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7630,7 +7630,7 @@
         "I provided the Optuna study with good baseline hyperparameters that I found in a previous Optuna hyperparameter testing so that the Optuna search\n",
         "goes in the right direction. Explanation about this first previous Optuna tuning: I had specified a high number of trials and the training\n",
         "took several hours so I stopped it halfway, but I got some good baseline hyperparameters that I then fed into my Optuna search with 15\n",
-        "trials (visible in the code below).“\n",
+        "trials (visible in the code below).\n",
         "'''"
       ],
       "metadata": {
@@ -7649,7 +7649,7 @@
       "metadata": {
         "id": "NGwzngeEVMdd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7674,7 +7674,7 @@
         "\n",
         "# Define the objective function\n",
         "def objective(trial):\n",
-        "    # reset only classification head:\n",
+        "    # reset only classification head\n",
         "    reset_classification_head(model_template, num_labels=2)\n",
         "    # Use the updated model_template as the model\n",
         "    model = model_template\n",
@@ -9499,7 +9499,7 @@
         "id": "VJHEJjE0j0JV",
         "outputId": "2ab3484f-d359-41a2-9e94-716cdd124a3e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9679,6 +9679,7 @@
         "- I split the data into train/val/test in a way that is not ideal and hence the 3 sets might not be perfectly separated. The code technically\n",
         "works because I indicate ranges, but I apply shuffling 3 times and not knowing how the shuffling really works internally, this can make the model a bit\n",
         "unpredictable and it is probably not the cleanest way of handling this. For next time, it might be better to shuffle once and then split into the 3 sets.\n",
+        "Using set_seed might also be a good idea to ensure reproducability.\n",
         "- The accuracy when evaluated on the validation set is significantly higher (0.8125) than the accuracy on the test set (0.6875). Since the hyperparameters\n",
         "were fine-tuned to the validation set, they are potentially overfitting to the validation set and that can happen especially easily with small datasets\n",
         "such as my case. I read that cross-validation is a way to avoid this issue (validation set used always changes).\n",
