Mit Colab erstellt

--- a/tutorial6.ipynb
+++ b/tutorial6.ipynb
@@ -544,36 +544,16 @@
     {
       "cell_type": "code",
       "source": [
-        "out = llm.invoke(\"Text: The actors are terrifically good, but the storyline lacks speed. \\n I hated this movie so much I never want to go to the cinema ever again. \\n Give me a percentage per sentiment (positive, neutral, negative) for each of these sentences individually: \")\n",
+        "out = llm.invoke(\"Give me a percentage per sentiment (positive, neutral, negative) for each sentence. \\n Text: I loved the movie! \\n Percentages: 100% positive, 0% neutral, 0% negative \\n Text: I am not sure what I think about this movie. It is not good but also not bad. \\n Percentages: 0% positive, 100% neutral, 0% negative \\n Text: I liked the visuals, but the rest is crap. 15% positive, 5% neutral, 80% negative \\n Text: The actors are terrifically good, but the storyline lacks speed. \\n Text: I hated this movie so much I never want to go to the cinema ever again. \\n \")\n",
         "\n",
-        "for i in out.split(\"\\n\\n\"):\n",
+        "for i in out.split(\"\\n\\n\"): ## lama outputs 2 line breaks so that's why this is used here\n",
         "  print(i)"
       ],
       "metadata": {
-        "id": "eD-AsDWvmADo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2cb690fe-9532-4f4f-98b3-1d1b29075120"
+        "id": "eD-AsDWvmADo"
       },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Based on the text, here are the sentiment percentages for each sentence:\n",
-            "1. \"The actors are terrifically good, but the storyline lacks speed.\"\n",
-            "* Positive: 60% (the word \"good\" and \"terrifically\" convey a positive tone)\n",
-            "* Neutral: 20% (the phrase \"but\" introduces a contrast, which makes it slightly neutral)\n",
-            "* Negative: 20% (the phrase \"lacks speed\" implies something is lacking or undesirable)\n",
-            "2. \"I hated this movie so much I never want to go to the cinema ever again.\"\n",
-            "* Positive: 0% (this sentence expresses strong negative emotions and no positive sentiment)\n",
-            "* Neutral: 0% (there's no neutral sentiment in this sentence, as it's entirely negative)\n",
-            "* Negative: 100% (the words \"hated\" and \"never want to go\" convey intense dislike and rejection)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -596,10 +576,41 @@
         "  print(i)"
       ],
       "metadata": {
-        "id": "V2q1Tl9ooUMS"
+        "id": "V2q1Tl9ooUMS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2cfdf5cc-7c29-4a1e-d42a-56b8bd8e8db9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "**PyTorch: A Deep Learning Framework**\n",
+            "PyTorch is an open-source machine learning library developed by Facebook's AI Research Lab (FAIR). It provides a dynamic computation graph, automatic differentiation, and a large collection of pre-built modules for common tasks.\n",
+            "**Pros:**\n",
+            "1.  **Easy to Learn**: PyTorch has a relatively low barrier to entry due to its Pythonic API, which makes it easy for developers to learn and use.\n",
+            "2.  **Dynamic Computation Graph**: PyTorch's computation graph is dynamic, meaning it can be modified at runtime. This allows for more flexibility and easier debugging than traditional static graphs.\n",
+            "3.  **Automatic Differentiation**: PyTorch provides automatic differentiation, which simplifies the process of computing gradients and reduces the need for manual implementation.\n",
+            "4.  **Pre-Built Modules**: PyTorch includes a wide range of pre-built modules for common tasks, such as convolutional neural networks (CNNs), recurrent neural networks (RNNs), and more.\n",
+            "5.  **Fast Inference**: PyTorch is optimized for fast inference, making it suitable for real-time applications.\n",
+            "**Cons:**\n",
+            "1.  **Limited Support for Large-Scale Deployments**: While PyTorch has made significant strides in recent years, it still lags behind frameworks like TensorFlow and Caffe2 when it comes to large-scale deployments.\n",
+            "2.  **Steep Learning Curve for Optimization**: Optimal hyperparameters can be difficult to find with PyTorch, particularly for more complex models.\n",
+            "3.  **Limited Support for Distributed Training**: While PyTorch has made progress in this area, distributed training still requires significant manual effort and tuning.\n",
+            "**When to Use PyTorch:**\n",
+            "1.  **Research and Development**: PyTorch is well-suited for research and development work where rapid prototyping and experimentation are necessary.\n",
+            "2.  **Small-Scale Projects**: For small-scale projects or proof-of-concepts, PyTorch's ease of use and flexibility make it an attractive choice.\n",
+            "3.  **High-Level Tasks**: PyTorch excels at high-level tasks such as image classification, natural language processing, and more.\n",
+            "**When Not to Use PyTorch:**\n",
+            "1.  **Large-Scale Deployments**: For large-scale deployments or applications requiring high throughput, frameworks like TensorFlow or Caffe2 may be a better choice.\n",
+            "2.  **Production-Ready Models**: While PyTorch has made significant strides in recent years, it may still require additional development and tuning for production-ready models.\n",
+            "In conclusion, PyTorch offers many advantages, particularly for research and development work, small-scale projects, or high-level tasks. However, its limitations, such as limited support for large-scale deployments and optimization challenges, must be carefully considered when deciding whether to use the framework.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -610,10 +621,42 @@
         "  print(i)"
       ],
       "metadata": {
-        "id": "4EpmYBmkoddq"
+        "id": "4EpmYBmkoddq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "44184877-e8c8-4b45-98a7-87196ec61ace"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "As a machine learning expert, I'll provide you with an in-depth analysis of PyTorch, its strengths and weaknesses, and when it might be suitable for your projects.\n",
+            "**Pros:**\n",
+            "1. **Dynamic computation graph**: PyTorch's dynamic computation graph allows for faster development and prototyping. It eliminates the need to manually define computation graphs, making it easier to explore different architectures and hyperparameters.\n",
+            "2. **Automatic differentiation**: PyTorch's automatic differentiation (autograd) system can automatically compute gradients, reducing manual effort and improving accuracy.\n",
+            "3. **Modular design**: PyTorch's modular design allows for easy integration of custom modules, making it a great choice for research and development projects.\n",
+            "4. **GPU acceleration**: PyTorch provides excellent GPU acceleration through its CUDA support, enabling faster training times for deep learning models.\n",
+            "5. **Active community and extensive documentation**: PyTorch has an active community and extensive documentation, ensuring that there are plenty of resources available for troubleshooting and learning.\n",
+            "**Cons:**\n",
+            "1. **Steep learning curve**: PyTorch's dynamic computation graph can be challenging to understand and work with, especially for those without prior experience in deep learning.\n",
+            "2. **Memory-intensive**: PyTorch requires significant memory to store the computation graph, which can lead to memory issues when working with large datasets or models.\n",
+            "3. **Slow inference speed**: While PyTorch excels during training, its dynamic computation graph can result in slower inference speeds compared to other frameworks like TensorFlow.\n",
+            "4. **Limited support for distributed training**: PyTorch's support for distributed training is still evolving and may require additional effort to set up.\n",
+            "5. **Inconsistent API**: PyTorch's API can be inconsistent across different versions, leading to potential issues when upgrading or downgrading the framework.\n",
+            "**When to use PyTorch:**\n",
+            "1. **Research and development projects**: PyTorch's modular design, dynamic computation graph, and automatic differentiation make it an ideal choice for research and development projects where rapid prototyping is essential.\n",
+            "2. **Proof-of-concept models**: PyTorch's ease of use and flexibility make it suitable for quickly testing new ideas or building proof-of-concept models.\n",
+            "3. **Small to medium-sized datasets**: PyTorch can handle small to medium-sized datasets with ease, making it a great choice for projects where memory is not a significant concern.\n",
+            "**When to avoid PyTorch:**\n",
+            "1. **Large-scale production deployments**: PyTorch's slower inference speeds and limited support for distributed training may make it less suitable for large-scale production deployments.\n",
+            "2. **High-performance computing applications**: PyTorch's dynamic computation graph can result in slower performance compared to other frameworks like TensorFlow, making it less ideal for high-performance computing applications.\n",
+            "In conclusion, PyTorch offers excellent features for rapid prototyping, research, and development projects. However, its steep learning curve, memory-intensive nature, and slow inference speeds may make it less suitable for large-scale production deployments or high-performance computing applications.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -632,10 +675,24 @@
         "  print(i)"
       ],
       "metadata": {
-        "id": "iGJ5wm1Gonds"
+        "id": "iGJ5wm1Gonds",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "194b6537-1202-4e25-b007-9cbdf8133d60"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Wolfgang Amadeus Mozart was born on January 27, 1756, and died on December 5, 1791.\n",
+            "Elvis Presley was born on January 8, 1935, and died on August 16, 1977.\n",
+            "So, Mozart lived for approximately 35 years, while Elvis lived for around 42 years. Therefore, Elvis Presley lived longer than Wolfgang Amadeus Mozart.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
